kubernetes/projects/01_kubernetes_for_developers/16/NetworkPolicies/Curl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netpol-demo-other

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
  namespace: netpol-demo-other
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
      - name: curl
        image: curlimages/curl
        command: ["sh", "-c", "sleep infinity"]
        resources:
