kubernetes/projects/01_kubernetes_for_developers/16/NetworkPolicies/HelloApi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netpol-demo-helloapi

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-api
  namespace: netpol-demo-helloapi
spec:
  ingressClassName: nginx
  rules:
  - host: hello-api.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-api
              port:
                number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: hello-api
  namespace: netpol-demo-helloapi
spec:
  type: ClusterIP
  selector:
    app: hello-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-api
  namespace: netpol-demo-helloapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-api
  template:
    metadata:
      labels:
        app: hello-api
    spec:
      containers:
      - name: hello-api
        image: k8scourse/module8-hello-api:1
        ports:
        - containerPort: 8080
        resources:
