kubernetes/projects/01_kubernetes_for_developers/16/NetworkPolicies/NetworkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: netpol-demo-nameapi
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-hello-api
  namespace: netpol-demo-nameapi
spec:
  podSelector:
    matchLabels:
      app: name-api
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: netpol-demo-helloapi
      podSelector:
        matchLabels:
          app: hello-api
